add user service

--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ rootProject.name = 'proyecto_final'
 include 'microservice-gateway'
 include 'microservice-eureka'
 include 'microservice-config'
+include 'microservice-user-management'
