--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include 'microservice-gateway'
 include 'microservice-eureka'
 include 'microservice-config'
 include 'microservice-user-management'
+include 'microservice-account-management'
