--- a/microservice-account-management/src/main/resources/application-docker.yml
+++ b/microservice-account-management/src/main/resources/application-docker.yml
@@ -8,7 +8,7 @@ spring:
     import: "optional:configserver:http://localhost:8082"
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jjdbc:postgresql://db:5432/accountdb
+    url: jdbc:postgresql://db:5432/accountdb
     username: postgres
     password: 921124
   jpa:
