--- a/microservice-eureka/src/main/resources/application.yml
+++ b/microservice-eureka/src/main/resources/application.yml
@@ -13,5 +13,5 @@ eureka:
     client:
         registerWithEureka: false
         fetchRegistry: false
-        server-url:
+        service-url:
             defaultZone: http://localhost:${server.port}/eureka/
