--- a/microservice-eureka/src/main/resources/application-docker.yml
+++ b/microservice-eureka/src/main/resources/application-docker.yml
@@ -8,10 +8,10 @@ spring:
     import: "optional:configserver:http://configserver:8888"
 
 eureka:
-  instance:
-    hostname: eureka-server
-  client:
-    registerWithEureka: false
-    fetchRegistry: false
-    serviceUrl:
-      defaultZone: http://eureka-server:${server.port}/eureka/
+    instance:
+        hostname: localhost
+    client:
+        registerWithEureka: false
+        fetchRegistry: false
+        service-url:
+            defaultZone: http://localhost:${server.port}/eureka/
